// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gridColumnStart renders 0 1`] = `
Array [
  .c0 {
  grid-column-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-start: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`gridColumnStart renders function 1`] = `
Array [
  .c0 {
  grid-column-start: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-start: has;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-start: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-start: has;
}

<div
    className="c0"
  />,
]
`;

exports[`gridColumnStart renders invalid theme path 1`] = `
Array [
  .c0 {
  grid-column-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-start: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`gridColumnStart renders negative number 1`] = `
Array [
  .c0 {
  grid-column-start: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-start: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-start: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-start: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridColumnStart renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  grid-column-start: July;
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-start: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-start: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-column-start: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  grid-column-start: July;
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-start: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-start: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-column-start: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  grid-column-start: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-column-start: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-start: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-start: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-column-start: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-start: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-column-start: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-start: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-start: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-column-start: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridColumnStart renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    grid-column-start: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-start: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-column-start: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    grid-column-start: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-start: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-column-start: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-column-start: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-start: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-start: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-column-start: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-column-start: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-start: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-start: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-column-start: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridColumnStart renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  grid-column-start: July;
}

@media May {
  .c0 {
    grid-column-start: August;
  }
}

@media April {
  .c0 {
    grid-column-start: September;
  }
}

@media January {
  .c0 {
    grid-column-start: November;
  }
}

@media April {
  .c0 {
    grid-column-start: August;
  }
}

@media June {
  .c0 {
    grid-column-start: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  grid-column-start: July;
}

@media May {
  .c0 {
    grid-column-start: August;
  }
}

@media April {
  .c0 {
    grid-column-start: September;
  }
}

@media January {
  .c0 {
    grid-column-start: November;
  }
}

@media April {
  .c0 {
    grid-column-start: August;
  }
}

@media June {
  .c0 {
    grid-column-start: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  grid-column-start: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-column-start: November;
  }
}

@media April {
  .c0 {
    grid-column-start: January;
  }
}

@media January {
  .c0 {
    grid-column-start: December;
  }
}

@media April {
  .c0 {
    grid-column-start: April;
  }
}

@media June {
  .c0 {
    grid-column-start: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-start: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-column-start: November;
  }
}

@media April {
  .c0 {
    grid-column-start: January;
  }
}

@media January {
  .c0 {
    grid-column-start: December;
  }
}

@media April {
  .c0 {
    grid-column-start: April;
  }
}

@media June {
  .c0 {
    grid-column-start: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridColumnStart renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    grid-column-start: July;
  }
}

@media April {
  .c0 {
    grid-column-start: August;
  }
}

@media January {
  .c0 {
    grid-column-start: September;
  }
}

@media April {
  .c0 {
    grid-column-start: November;
  }
}

@media June {
  .c0 {
    grid-column-start: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    grid-column-start: July;
  }
}

@media April {
  .c0 {
    grid-column-start: August;
  }
}

@media January {
  .c0 {
    grid-column-start: September;
  }
}

@media April {
  .c0 {
    grid-column-start: November;
  }
}

@media June {
  .c0 {
    grid-column-start: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-column-start: January;
  }
}

@media April {
  .c0 {
    grid-column-start: December;
  }
}

@media January {
  .c0 {
    grid-column-start: April;
  }
}

@media April {
  .c0 {
    grid-column-start: May;
  }
}

@media June {
  .c0 {
    grid-column-start: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-column-start: January;
  }
}

@media April {
  .c0 {
    grid-column-start: December;
  }
}

@media January {
  .c0 {
    grid-column-start: April;
  }
}

@media April {
  .c0 {
    grid-column-start: May;
  }
}

@media June {
  .c0 {
    grid-column-start: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridColumnStart renders postitive number 1`] = `
Array [
  .c0 {
  grid-column-start: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-start: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-start: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-start: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridColumnStart renders string 1`] = `
Array [
  .c0 {
  grid-column-start: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-start: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-start: June;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-start: June;
}

<div
    className="c0"
  />,
]
`;

exports[`gridColumnStart renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`gridColumnStart renders valid theme path 1`] = `
Array [
  .c0 {
  grid-column-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
